Spacing fix, file cleanup done

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -32,7 +32,13 @@
         flex-direction: row;
         flex-wrap: nowrap;
         justify-content: center;
-        padding: 0 15%;
+        padding: 0 11.5%;
+    }
+    @media (min-width: 1600px) {
+        padding: 0 18vw;
+    }
+    @media (min-width: 1920px) {
+        padding: 0 25vw;
     }
 }
 
