--- a/src/components/Article/Article.scss
+++ b/src/components/Article/Article.scss
@@ -12,7 +12,7 @@
         margin-top: 0;
         text-align: left;
         p {
-            font-size: 18px;
+            line-height: 27px;
         }
     }
 
