--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -11,9 +11,8 @@
     }
     @include desktop {
         flex: 1;
-        margin-left: 4rem;
-        margin-top: 5rem;
-        max-width: 33.75rem;
+        margin-left: 2rem;
+        margin-top: 5.8rem;
     }
 
     &__content {
@@ -24,7 +23,7 @@
         position: relative;
         @include desktop {
             margin-top: 1.5rem;
-            padding: 2.5rem 2.5rem 2rem;
+            padding: 1.2rem 2.5rem 2.7rem;
         }
         &:before {
             box-shadow: 0 9px 0 hsla(249, 10%, 26%, 0.18);
@@ -60,4 +59,9 @@
     font-size: 0.75rem;
     font-style: italic;
     font-weight: 500;
+}
+
+.input__error-icon {
+    position: absolute;
+    top: 0;
 }
