--- a/src/components/shared/Input/Input.scss
+++ b/src/components/shared/Input/Input.scss
@@ -12,6 +12,7 @@
     position: relative;
     width: 100%;
     @include desktop {
+        margin-top: 1.3rem;
         padding: 1.125rem 1.25rem;
         padding-left: 1.8rem;
     }
